# surf-tracker

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.worker  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pgadmin-servers.json  poc_fetch_forecast.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  simple_demo_forecast.py  uvicorn_log_config.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0c1d2e3f4g56_add_inline_surfboard_fields.py  0f0fb3f4fcea_create_surf_sessions_table.py  1190b997a895_add_spots_table_and_refactor_sessions.py  1a32e2973cc7_add_tide_columns_to_surf_sessions.py  406a934ab054_update_surf_sessions_table.py  48e312b8b5ab_update_sessions_table.py  4ebf2c12b7a9_create_surf_tables.py  6f571609f4f9_add_weather_fields_to_surf_sessions.py  780920bd1444_updated_surfforecast_table.py  79b4afab838f_convert_difficulty_from_enum_array_to_.py  831bd530d0b7_update_sessions_table.py  85516576dd63_add_surfboards_table.py  85cd77af170c_add_fiels_surf_forecast_name_to_spot_.py  89fca42b6222_updated_surfforecast_table.py  9561d6a3b591_init.py  a425a8df3679_updated_surfforecast_table.py  a6cc58e01faa_create_sessions_table.py  aa12bb34cc56_add_surf_session_reviews_table.py  aba10a3d6785_add_tides.py  b3e1faeefc05_add_sessions_table.py  bda0c001287d_update_surfboards_table.py  c1b2d3e4f5a6_rename_surf_sessions_date_to_datetime.py  c5db5e2c9ddf_add_is_admin_to_users.py  d1e2f3a4b5c6_wave_wind_dir_string_surf_sessions.py  d5f1b0ae1234_merge_admin_branch.py  e2f3a4b5c6d7_add_energy_rating_surf_sessions.py  (+4 more)
app/: database.py  logging.py  main.py  worker.py
app/admin/: __init__.py  (+2 more)
frontend/: .gitignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts
tests/: conftest.py  test_auth.py  test_cleanup.py  test_cors.py  test_health.py  test_logging.py  test_openmeteo.py  test_sessions.py  test_spot_reviews.py  test_spots.py  test_surf_session_schema.py  test_surfboards.py  test_tide_interpolation.py  test_weather.py
(+100 files in other folders)
