[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "surf-tracker"
version = "0.1.0"
description = "Surf Tracker Platform"
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy==2.0.45",
    "psycopg[binary]==3.3.2",
    "asyncpg==0.31.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
]

[project.optional-dependencies]
api = [
    "alembic==1.18.0",
    "aiosqlite==0.22.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "python-multipart==0.0.21",
    "sqladmin==0.22.0",
    "itsdangerous==2.2.0",
    "httpx==0.28.1",
]
worker = [
    "playwright>=1.48.0",
    "beautifulsoup4==4.12.3",
    "apscheduler==3.10.4",
]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 120
target-version = ["py310"]
include = '(^(app|tests|alembic)/.*\.py$|^[^/]+\.py$)'
exclude = '(\.venv|\.mypy_cache|\.ruff_cache|\.pytest_cache|htmlcov|output|tmp|frontend)'

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
    "demo_*.py",
    "poc_*.py",
    "frontend",
    "htmlcov",
    "output",
    "tmp",
    ".venv",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
per-file-ignores = { "alembic/versions/*.py" = ["E501", "W291"], "app/models/__init__.py" = ["F401"] }

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.10"
files = ["app/core", "app/schemas"]
ignore_missing_imports = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
exclude = "(frontend|htmlcov|output|tmp|demo_.*|poc_.*|app/services|app/models|app/api|app/admin|app/scripts)"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["alembic.versions.*", "alembic.env"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["sqladmin.*", "apscheduler.*", "python_jose.*"]
ignore_missing_imports = true
